# rtd_model

./: 20230208_260Microliters0.5MPulseson50mMNaNO3Transition_FDM 002.csv  README.md  compare_data.py  convergence_study.py  demo_flow_profiles.py  experiments.yaml  pyproject.toml  requirements.txt  rtd_cli.py  run_figures.py  verify.py
.github/workflows/: ci.yml
docs/: DISCRETIZATION.md  FLOW_PROFILES.md  MULTICOMPONENT.md  NUMERICS.md  PARAMETERS.md  PLANS.md  TIMING_AND_FLOW.md  YAML_SCHEMA.md
rtd/: __init__.py  data.py  detectors.py  equipment.py  experiments.py  filter_model.py  flow.py  injection.py  plots.py  simulate.py  units.py
tests/: test_rtd.py
